--- a/src/app/devices/all-devices/all-devices.component.html
+++ b/src/app/devices/all-devices/all-devices.component.html
@@ -1,5 +1,6 @@
 <p>
   all-devices works!
 </p>
-<div
-  *ngFor="let device of (devices$ | async)">{{device.name}}</div>
+<app-device-card
+  *ngFor="let device of (devices$ | async)"
+  [device]="device"></app-device-card>
