--- a/src/app/devices/devices-list/devices-list.component.html
+++ b/src/app/devices/devices-list/devices-list.component.html
@@ -1,3 +1,3 @@
 <app-device-card
-  *ngFor="let device of (devices$ | async)"
+  *ngFor="let device of (devices$ | async); trackBy:trackById"
   [device]="device"></app-device-card>
