--- a/src/app/rules/rules-list/rules-list.component.html
+++ b/src/app/rules/rules-list/rules-list.component.html
@@ -1,5 +1,3 @@
-<p>
-  rules-list works!
-</p>
-<h3
-  *ngFor="let rule of rules$ | async">{{rule.name}}</h3>
+<app-rule-card
+  *ngFor="let rule of rules$ | async"
+  [rule]=rule></app-rule-card>
