--- a/src/app/rules/temperature-condition/temperature-condition.component.html
+++ b/src/app/rules/temperature-condition/temperature-condition.component.html
@@ -12,7 +12,7 @@
         class="value-input"
         mdInput
         [(ngModel)]="condition.value"
-        (ngModelChange)="saveCondition()"
+        (ngModelChange)="onChange()"
         type="number"
         min="0"
         max="25"
