--- a/src/app/rules/temperature-condition/temperature-condition.component.html
+++ b/src/app/rules/temperature-condition/temperature-condition.component.html
@@ -1,24 +1,27 @@
-<md-card>
-  <md-card-header>
-    <md-card-title>
-      Temperature
-    </md-card-title>
-    <md-card-subtitle>{{condition.logicOperator}}</md-card-subtitle>
-  </md-card-header>
-  <md-card-content>
-    <md-input-container class="value-input-wrapper"
-      color="warn">
-      <input
-        class="value-input"
-        mdInput
-        [(ngModel)]="condition.value"
-        (ngModelChange)="onChange()"
-        type="number"
-        min="0"
-        max="25"
-        step="0.5">
-      <label
-        mdSuffix>&deg;C</label>
-    </md-input-container>
-  </md-card-content>
-</md-card>
+<div
+  class="temperature-conditon">
+  <button
+    class="logic-button"
+    md-mini-fab>{{condition.logicOperator}}</button>
+  <md-card>
+    <md-card-content>
+      <md-icon
+        class="type-icon"
+        svgIcon="thermometer"></md-icon>
+      <md-input-container class="value-input-wrapper"
+        color="warn">
+        <input
+          class="value-input"
+          mdInput
+          [(ngModel)]="condition.value"
+          (ngModelChange)="onChange()"
+          type="number"
+          min="0"
+          max="25"
+          step="0.5">
+        <label
+          mdSuffix>&deg;C</label>
+      </md-input-container>
+    </md-card-content>
+  </md-card>
+</div>
