--- a/src/app/rules/time-condition/time-condition.component.scss
+++ b/src/app/rules/time-condition/time-condition.component.scss
@@ -1,5 +1,28 @@
+.time-conditon {
+  display: flex;
+  align-items: center;
+}
+
 md-card {
   border-radius: 1rem;
+  flex-grow: 1;
+}
+
+.mat-card-content {
+    align-items: center;
+    display: flex;
+}
+
+.logic-button {
+  margin-right: 1rem;
+}
+
+.type-icon {
+  margin-right: 1rem;
+}
+
+.value-input-wrapper {
+  margin-left: 1rem;
 }
 
 .value-input {
