--- a/src/app/rules/temperature-condition/temperature-condition.component.scss
+++ b/src/app/rules/temperature-condition/temperature-condition.component.scss
@@ -11,11 +11,13 @@ md-card {
 .group-top {
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
+  border-bottom: 2px solid #f8f8f8;
 }
 
 .group-bottom {
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
+  border-bottom: none;
 }
 
 .mat-card-content {
@@ -38,4 +40,8 @@ md-card {
 
 .value-input {
   font-size: 22px;
+}
+
+.layout-spacer {
+  flex-grow: 1;
 }
