--- a/src/app/rules/week-day-condition/week-day-condition.component.html
+++ b/src/app/rules/week-day-condition/week-day-condition.component.html
@@ -4,12 +4,10 @@
     [class.group-top]="isGroupTop"
     [class.group-bottom]="isGroupBottom">
     <md-card-content>  
-      <md-button-toggle
-        class="rule-button"
-        [checked]="settingsActive"
-        (change)="settingsActive = !settingsActive">
-        <md-icon>date_range</md-icon>
-      </md-button-toggle> 
+      <md-icon
+        class="condition-icon"
+        [class.button-selected]="settingsActive"
+        (click)="settingsActive = !settingsActive">date_range</md-icon>
       <md-button-toggle-group
         class="value-input-wrapper"
         multiple>
@@ -21,8 +19,6 @@
         <md-button-toggle [value]="condition.saturday" [checked]="condition.saturday" (change)="toggleDay('saturday')">S</md-button-toggle>
         <md-button-toggle [value]="condition.sunday" [checked]="condition.sunday" (change)="toggleDay('sunday')">S</md-button-toggle>
       </md-button-toggle-group>
-      <div
-        class="layout-spacer"></div>
     </md-card-content>
     <md-card-actions
       *ngIf="settingsActive">
