--- a/src/app/rules/temperature-condition/temperature-condition.component.html
+++ b/src/app/rules/temperature-condition/temperature-condition.component.html
@@ -6,7 +6,9 @@
     <md-card-content>
       <md-icon
         class="type-icon"
-        svgIcon="thermometer"></md-icon>
+        svgIcon="thermometer"
+        [class.settings-selected]="settingsActive"
+        (click)="settingsActive = !settingsActive"></md-icon>
       <md-input-container class="value-input-wrapper">
         <input
           class="value-input"
@@ -20,13 +22,6 @@
         <label
           mdSuffix>&deg;C</label>
       </md-input-container>
-      <div
-        class="layout-spacer"></div>
-      <md-button-toggle
-        [checked]="settingsActive"
-        (change)="settingsActive = !settingsActive">
-        <md-icon>settings</md-icon>
-      </md-button-toggle>
     </md-card-content>
     <md-card-actions
       *ngIf="settingsActive">
