make weekdays fit

--- a/src/app/rules/week-day-condition/week-day-condition.component.scss
+++ b/src/app/rules/week-day-condition/week-day-condition.component.scss
@@ -60,6 +60,11 @@ md-card {
   }
 }
 
+.weekday-button {
+  margin-left: -2px;
+  margin-right: -2px;
+}
+
 .rule-button {
   margin-right: 1rem;
   margin-top: 1rem;
