--- a/src/app/rules/week-day-condition/week-day-condition.component.html
+++ b/src/app/rules/week-day-condition/week-day-condition.component.html
@@ -11,13 +11,41 @@
       <md-button-toggle-group
         class="value-input-wrapper"
         multiple>
-        <md-button-toggle [value]="condition.monday" [checked]="condition.monday" (change)="toggleDay('monday')">M</md-button-toggle>
-        <md-button-toggle [value]="condition.tuesday" [checked]="condition.tuesday" (change)="toggleDay('tuesday')">T</md-button-toggle>
-        <md-button-toggle [value]="condition.wednesday" [checked]="condition.wednesday" (change)="toggleDay('wednesday')">W</md-button-toggle>
-        <md-button-toggle [value]="condition.thursday" [checked]="condition.thursday" (change)="toggleDay('thursday')">T</md-button-toggle>
-        <md-button-toggle [value]="condition.friday" [checked]="condition.friday" (change)="toggleDay('friday')">F</md-button-toggle>
-        <md-button-toggle [value]="condition.saturday" [checked]="condition.saturday" (change)="toggleDay('saturday')">S</md-button-toggle>
-        <md-button-toggle [value]="condition.sunday" [checked]="condition.sunday" (change)="toggleDay('sunday')">S</md-button-toggle>
+        <md-button-toggle
+          class="weekday-button"
+          [value]="condition.monday"
+          [checked]="condition.monday"
+          (change)="toggleDay('monday')">M</md-button-toggle>
+        <md-button-toggle
+          class="weekday-button"
+          [value]="condition.tuesday"
+          [checked]="condition.tuesday"
+          (change)="toggleDay('tuesday')">T</md-button-toggle>
+        <md-button-toggle
+          class="weekday-button"
+          [value]="condition.wednesday"
+          [checked]="condition.wednesday"
+          (change)="toggleDay('wednesday')">W</md-button-toggle>
+        <md-button-toggle
+          class="weekday-button"
+          [value]="condition.thursday"
+          [checked]="condition.thursday"
+          (change)="toggleDay('thursday')">T</md-button-toggle>
+        <md-button-toggle
+          class="weekday-button"
+          [value]="condition.friday"
+          [checked]="condition.friday"
+          (change)="toggleDay('friday')">F</md-button-toggle>
+        <md-button-toggle
+          class="weekday-button"
+          [value]="condition.saturday"
+          [checked]="condition.saturday"
+          (change)="toggleDay('saturday')">S</md-button-toggle>
+        <md-button-toggle
+          class="weekday-button"
+          [value]="condition.sunday"
+          [checked]="condition.sunday"
+          (change)="toggleDay('sunday')">S</md-button-toggle>
       </md-button-toggle-group>
     </md-card-content>
     <md-card-actions
