--- a/src/app/rules/temperature-condition/temperature-condition.component.scss
+++ b/src/app/rules/temperature-condition/temperature-condition.component.scss
@@ -55,3 +55,11 @@ md-card {
   justify-content: space-between;
   padding-bottom: 1rem !important;
 }
+
+.actualValue {
+  margin: 0;
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
