--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,17 @@
 <div class="home-component mat-typography">
-    <h2
-      class="mat-h2">
-      Internet of All the Things
-    </h2>
+  <h2
+    class="mat-h2">
+    Internet of All the Things
+  </h2>
+  <button
+    (click)="logIn()"
+    md-raised-button>
+    Log In
+  </button>
+
+  <button
+    md-button
+    disabled>
+    Register
+  </button>
 </div>
