--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '~@angular/material/theming';
+@include mat-core();
+
+$app-primary: mat-palette($mat-grey);
+$app-accent:  mat-palette($mat-red, A200, A100, A400);
+$app-theme:   mat-light-theme($app-primary, $app-accent);
+
+@include angular-material-theme($app-theme);
 
 body {
   margin: 0;
+  background-color: #757575;
 }
