--- a/src/app/rules/rule-condition/temperature/temperature.component.html
+++ b/src/app/rules/rule-condition/temperature/temperature.component.html
@@ -1,7 +1,6 @@
 <md-icon
   class="type-icon"
-  svgIcon="thermometer"
-  (click)="settingsActive = !settingsActive"></md-icon>
+  svgIcon="thermometer"></md-icon>
 <md-input-container class="value-input-wrapper">
 <input
   class="value-input"
