--- a/src/app/devices/device-card/device-card.component.scss
+++ b/src/app/devices/device-card/device-card.component.scss
@@ -4,7 +4,6 @@
 }
 
 .device-header {
-  margin: 20px;
   display: flex;
   justify-content: space-between;
 }
@@ -14,5 +13,6 @@
 }
 
 .device-card {
+  padding: 1rem;
   margin-bottom: 0.25rem;
 }
